deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-api
  labels:
    app: comments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: comments-api
        image: ghcr.io/assapir/assapir.github.io:edge
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
  labels:
    app: comments
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1337
      protocol: TCP
  selector:
    app: comments
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: comments-api-issuer
spec:
  tls:
    - hosts:
      - api.ass.af
      secretName: comments-api-tls
  rules:
  - host: api.ass.af
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comments-service
            port:
              number: 80
